--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="col-sm-4" style="padding-bottom: 25px">
  <a
               href="https://www.facebook.com/profile.php?id=100051902298527" target="_blank">
-    <img src= "/myPic.jpg" alt="My Profile" style="position:relative; height: 15vh; border: 1px solid  #01786f; border-radius: 50%; box-shadow: -3px 9px 9px rgba(0, 0, 0, 0.5);">
+    <img src= "IMG_20230321_170417_837.jpg" alt="My Profile" style="position:relative; height: 15vh; border: 1px solid  #01786f; border-radius: 50%; box-shadow: -3px 9px 9px rgba(0, 0, 0, 0.5);">
     </a>
                 </div>
                 <div class="col-sm-8" >
